--- a/404.html
+++ b/404.html
@@ -23,9 +23,9 @@
         <footer>
             <div class="social"><a href="https://youtube.com/@icvhack"><i class="icon ion-social-youtube"></i></a><a href="https://facebook.com/TouLanhO"><i class="icon ion-social-facebook"></a></i></a></div>
             <ul class="list-inline">
-                <li class="list-inline-item"><a href="../index.html">Home</a></li>
-                <li class="list-inline-item"><a href="/page/about.html">About</a></li>
-                <li class="list-inline-item"><a href="/page/contact.html">Contact</a></li>
+                <li class="list-inline-item"><a href="index.html">Home</a></li>
+                <li class="list-inline-item"><a href="page/about.html">About</a></li>
+                <li class="list-inline-item"><a href="page/contact.html">Contact</a></li>
             </ul>
             <p class="copyright">@Copyright - Tou 2023</p>
         </footer>
