--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <li class="list-inline-item"><a href="page/about.html">About</a></li>
                 <li class="list-inline-item"><a href="page/contact.html">Contact</a></li>
             </ul>
-            <p class="copyright">@Copyright - ICVHACK 2023</p>
+            <p class="copyright">@Copyright - Tou 2023</p>
         </footer>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/web-socket-js/1.0.0/web_socket.min.js"></script>
