--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <ul>
                 <li><a href="#"><b>Home</b></a></li>
                 <li><a href="page/about.html"><b>About</b></a></li>
+                <li><a href="page/donate.html"><b>Donate</b></a></li>
                 <li><a href="page/contact.html" class="cta">Contact</a></li>
             </ul>
         </nav>
