--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
     <footer>
   <div class="footer-basic">
         <footer>
-            <div class="social"><a href="https://youtube.com/@icvhack"><i class="icon ion-social-youtube"></i></a><a href="https://facebook.com/TouLanhO"><i class="icon ion-social-facebook"></a></i></a></div>
+            <div class="social">
+  <a href="https://youtube.com/@icvhack">
+    <i class="icon ion-social-youtube"></i>
+  </a>
+  <a href="https://facebook.com/TouLanhO">
+    <i class="icon ion-social-facebook"></i>
+  </a>
+  <a href="https://github.com/yourusername">
+    <i class="icon ion-social-github"></i>
+  </a>
+</div>  
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Home</a></li>
                 <li class="list-inline-item"><a href="page/about.html">About</a></li>
