--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
   <a href="https://facebook.com/TouLanhO">
     <i class="icon ion-social-facebook"></i>
   </a>
-  <a href="https://github.com/yourusername">
+  <a href="https://github.com/TheRealTou">
     <i class="icon ion-social-github"></i>
   </a>
-</div>  
+         </div>  
             <ul class="list-inline">
                 <li class="list-inline-item"><a href="#">Home</a></li>
                 <li class="list-inline-item"><a href="page/about.html">About</a></li>
