--- a/index.html
+++ b/index.html
@@ -3,50 +3,37 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Minecraft Server Checker</title>
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+    <title>Page Not Found | Minecraft Server Checker</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="styles.css">
-    <script>
-    // Define the function to check if the user is a bot
-    function isBot() {
-        // Check if the user agent string contains common bot keywords
-        return /bot|google|baidu|bing|msn|duckduckbot|teoma|slurp|yandex/i.test(navigator.userAgent);
-    }
-    
-    // If the user is a bot, redirect to an error page
-    if (isBot()) {
-        window.location.href = "error.html";
-    }
-</script>
-
   </head>
-  <body>    
-        <nav>
-            <ul>
-                <li><a href="#"><b>Home</b></a></li>
-                <li><a href="page/about.html"><b>About</b></a></li>
-                <li><a href="page/donate.html"><b>Donate</b></a></li>
-                <li><a href="page/contact.html" class="cta">Contact</a></li>
-            </ul>
-        </nav>
-   <div id="loader"></div>
-    <div id="loader"></div>
+  <body>
     <div id="container">
-      <h1><b>Minecraft Server Checker</b></h1>
-      <form>
-        <label for="server">Enter server IP address or hostname:</label>
-        <input type="text" id="server" name="server" />
-        <button class="submit" role="submit">Check</button>
-      </form>
-      <div id="result"></div>
-      <p>If the server is online, you'll be able to see its current player count and ping time. If the server is offline, you'll see a message letting you know that the server is unreachable.</p>
-      <p>If you encounter any issues while using our tool, please don't hesitate to contact us using the form on the <a href="page/contact.html">Contact Us</a> page.</p>
+      <h1>Page Not Found 404</h1>
+      <p>We're sorry, but the page you are looking for is under development. Please wait.</p>
+     <a href="https://ibb.co/1ZzcZ5w"><img src="https://i.ibb.co/Zd29dPk/24370-8-creeper-transparent-background.png" alt="24370-8-creeper-transparent-background" width="900" height="900" border="0" /></a>
+
     </div>
-        <script src="js/script.js"></script>
-     </body>
+     <footer>
+  <div class="footer-basic">
+        <footer>
+            <div class="social"><a href="https://youtube.com/@icvhack"><i class="icon ion-social-youtube"></i></a><a href="https://facebook.com/TouLanhO"><i class="icon ion-social-facebook"></a></i></a></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="index.html">Home</a></li>
+                <li class="list-inline-item"><a href="page/about.html">About</a></li>
+                <li class="list-inline-item"><a href="page/contact.html">Contact</a></li>
+            </ul>
+            <p class="copyright">@Copyright - Tou 2023</p>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+</footer>
+
+    <script src="js/script.js"></script>
+  </body>
 </html>
