--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     
   </head>
   <body>    
-        <nav data-aos="zoom-in-left" data-aos-easing="ease-in-out"  data-aos-duration="4000">
+        <nav data-aos="zoom-in-right" data-aos-easing="ease-in-out"  data-aos-duration="4000">
             <ul>
                 <li><a href="index.html"><b>Home</b></a></li>
                 <li><a href="page/about.html"><b>About</b></a></li>
