--- a/404.html
+++ b/404.html
@@ -13,8 +13,8 @@
   </head>
   <body>
     <div id="container">
-      <h1>Page Not Found 404</h1>
-      <p>We're sorry, but the page you are looking for is under development. Please wait.</p>
+      <h1 data-aos="fade-in" data-aos-easing="ease-in-out"  data-aos-duration="4000"><b>Page Not Found 404</b></h1>
+      <p data-aos="fade-right" data-aos-easing="ease-in-out"  data-aos-duration="4000">We're sorry, but the page you are looking for is under development. Please wait.</p>
 
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
