--- a/index.html
+++ b/index.html
@@ -23,8 +23,21 @@
                 <li><a href="page/contact.html" class="cta">Contact</a></li>
             </ul>
         </nav>
-   <div id="loader"></div>
-    <div id="loader"></div>
+   <div class="loading-screen">
+  <div class="loading-box">
+    <div class="loading-bar"></div>
+    <div class="loading-bar"></div>
+    <div class="loading-bar"></div>
+    <div class="loading-bar"></div>
+    <div class="loading-bar"></div>
+    <div class="loading-bar"></div>
+    <div class="loading-bar"></div>
+    <div class="loading-bar"></div>
+    <div class="loading-bar"></div>
+    <div class="loading-bar"></div>
+  </div>
+  <div class="loading-text">Loading...</div>
+</div>
     <div id="container">
       <h1 data-aos="fade-in" data-aos-duration="3000"><b> Minecraft Server Checker</b></h1>
       <form>
