--- a/index.html
+++ b/index.html
@@ -23,19 +23,8 @@
                 <li><a href="page/contact.html" class="cta">Contact</a></li>
             </ul>
         </nav>
-   <div class="loading-screen">
-  <div class="loading-box">
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-    <div class="loading-bar"></div>
-  </div>
+  <div id="loader"></div>
+    <div id="loader"></div>
   <div class="loading-text">Loading...</div>
 </div>
     <div id="container">
