--- a/index.html
+++ b/index.html
@@ -44,6 +44,15 @@
       <p data-aos="fade-right" data-aos-duration="4000">If the server is online, you'll be able to see its current player count and ping time. If the server is offline, you'll see a message letting you know that the server is unreachable.
       If you encounter any issues while using our tool, please don't hesitate to contact us using the form on the <a href="page/contact.html">Contact Us</a> page.</p>
     </div>
+    <footer>
+  <div class="container">
+    <div class="row">
+      <div class="col-12 text-center">
+        <p>Made with 💖 by tou</p>
+      </div>
+    </div>
+  </div>
+</footer>
         <script src="js/script.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
