--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <button class="submit" role="submit">Check</button>
       </form>
       <div id="result"></div>
-      <p data-aos="fade-right" data-aos-duration="4000">If the server is online, you'll be able to see its current player count <a href="page/donate.html" onclick="loadPage('page/donate.html')">Page 1</a> and ping time. If the server is offline, you'll see a message letting you know that the server is unreachable.
+      <p data-aos="fade-right" data-aos-duration="4000">If the server is online, you'll be able to see its current player count and ping time. If the server is offline, you'll see a message letting you know that the server is unreachable.
       If you encounter any issues while using our tool, please don't hesitate to contact us using the form on the <a href="page/contact.html">Contact Us</a> page.</p>
     </div>
 
