--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <button class="submit" role="submit">Check</button>
       </form>
       <div id="result"></div>
-      <p class="shadow-text"><p data-aos="fade-right" data-aos-duration="4000">If the server is online, you'll be able to see its current player count and ping time. If the server is offline, you'll see a message letting you know that the server is unreachable.
-      If you encounter any issues while using our tool, please don't hesitate to contact us using the form on the <a href="page/contact.html">Contact Us</a> page.</p></p>
+      <p data-aos="fade-right" data-aos-duration="4000">If the server is online, you'll be able to see its current player count and ping time. If the server is offline, you'll see a message letting you know that the server is unreachable.
+      If you encounter any issues while using our tool, please don't hesitate to contact us using the form on the <a href="page/contact.html">Contact Us</a> page.</p>
     </div>
 
         <script src="js/script.js"></script>
