--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <div id="loader"></div>
     <div id="loader"></div>
     <div id="container">
-      <h1 data-aos="fade-in" data-aos-duration="3000"><b> Minecraft Server Checker</b></h1>
+      <h1 class="animate-character" data-aos="fade-in" data-aos-duration="3000"><b> Minecraft Server Checker</b></h1>
       <form>
   <label for="server" data-aos="fade-in" data-aos-duration="3000">Enter server IP address or hostname:</label>
   <input type="text" id="server" name="server" />
