--- a/index.html
+++ b/index.html
@@ -44,7 +44,9 @@
       <p data-aos="fade-right" data-aos-duration="4000">If the server is online, you'll be able to see its current player count and ping time. If the server is offline, you'll see a message letting you know that the server is unreachable.
       If you encounter any issues while using our tool, please don't hesitate to contact us using the form on the <a href="page/contact.html">Contact Us</a> page.</p>
     </div>
-
+    <div class="footer1">
+      Made With 💖 By Tou
+    </div>
         <script src="js/script.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
