--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="index.html"><b>Home</b></a></li>
                 <li><a href="page/about.html"><b>About</b></a></li>
                 <li><a href="page/donate.html"><b>Donate</b></a></li>
-                <li><a href="page/contact.html" class="cta">Contact</a></li>
+                <li><a href="page/contact.html" class="ctn">Contact</a></li>
             </ul>
         </nav>
   <div id="loader"></div>
