--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="styles.css">
+
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZPHTNWP8FV"></script>
@@ -23,17 +24,13 @@
 </script>
   </head>
   <body>    
-        <nav data-aos="zoom-in-right" data-aos-easing="ease-in-out"  data-aos-duration="4000">
-            <ul>
-                <li><a href="index.html"><b>Home</b></a></li>
-                <li><a href="page/about.html"><b>About</b></a></li>
-                <li><a href="page/donate.html"><b>Donate</b></a></li>
-                <li><a href="page/contact.html" class="ctn">Contact</a></li>
-            </ul>
-        </nav>
+     <div class="wave"></div>
+     <div class="wave"></div>
+     <div class="wave"></div>
+  </div>
   <div id="loader"></div>
     <div id="loader"></div>
-    <div id="container">
+    <div id="container" data-aos="fade-in" data-aos-easing="ease-in-out"  data-aos-duration="4000">
       <h1 class="animate-character" data-aos="fade-in" data-aos-duration="3000"><b> Minecraft Server Checker</b></h1>
       <form>
   <label for="server" data-aos="fade-in" data-aos-duration="3000">Enter server IP address or hostname:</label>
@@ -42,11 +39,43 @@
       </form>
       <div id="result"></div>
       <p data-aos="fade-right" data-aos-duration="4000">If the server is online, you'll be able to see its current player count and ping time. If the server is offline, you'll see a message letting you know that the server is unreachable.
-      If you encounter any issues while using our tool, please don't hesitate to contact us using the form on the <a href="page/contact.html">Contact Us</a> page.</p>
+      If you encounter any issues while using our tool, please don't hesitate to contact us using the form on the <a href="page/contact.html"><b>Contact Us</b></a> page.</p>
     </div>
-    <div class="footer1">
-      Made With 💖 By Tou
-    </div>
+    <div class="footer-basic" data-aos="fade-in" data-aos-easing="ease-in-out"  data-aos-duration="4000">
+      <footer>
+          <ul class="list-inline">
+              <li class="list-inline-item"><a href="index.html">Home</a></li>
+              <li class="list-inline-item"><a href="page/about.html" onclick="switchPage('home')">About</a></li>
+              <li class="list-inline-item"><a href="page/contact.html">Contact</a></li>
+              <li class="list-inline-item"><a href="page/donate.html">donate</a></li>
+              <li class="list-inline-item"><a href="#">Soon</a></li>
+          </ul>
+          <div id="content">
+            <!-- This is where the page content will be loaded -->
+          </div>
+          <p class="copyright">Made With 💖 By Tou</p>
+      </footer>
+  </div>
+  <script>
+    function switchPage(page) {
+      // Use the fetch API to load the page content from the server
+      fetch(page + '.html')
+        .then(response => response.text())
+        .then(html => {
+          // Update the page content
+          document.getElementById('content').innerHTML = html;
+          
+          // Add a new entry to the browser's history
+          history.pushState(null, null, page);
+        });
+    }
+    
+    // Listen for the popstate event to handle back/forward button clicks
+    window.addEventListener('popstate', event => {
+      // Reload the content for the current page
+      switchPage(location.pathname.slice(1, -5));
+    });
+  </script>
         <script src="js/script.js"></script>
         <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
         <script>
