--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               <li class="list-inline-item"><a href="page/about.html" onclick="switchPage('home')">About</a></li>
               <li class="list-inline-item"><a href="page/contact.html">Contact</a></li>
               <li class="list-inline-item"><a href="page/donate.html">donate</a></li>
-              <li class="list-inline-item"><a href="#">Soon</a></li>
+              <li class="list-inline-item"><a href="iplookup.html">Soon</a></li>
           </ul>
           <div id="content">
             <!-- This is where the page content will be loaded -->
